@@ -295,6 +295,10 @@ AC_CHECK_HEADER(dlfcn.h,
 	if test "$gawk_have_dlopen" = yes
 	then
 		AC_DEFINE([DYNAMIC], 1, [dynamic loading is possible])
+		if uname | $EGREP -i 'linux|freebsd' > /dev/null
+		then
+			LDFLAGS="$LDFLAGS -export-dynamic"
+		fi
 	fi
 ])
 
