@@ -1,3 +1,9 @@
+2012-11-26         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* bindarr.c, fileop.c, sparr.c: Make them compile.
+	* steps: Reinstated and updated.
+	* testsparr.awk: Add call to extension().
+
 2011-05-03         John Haque     <j.eh@mchsi.com>
 
 	* fileop.c, record.awk, testrecord.sh: New files.
